ingress-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx
  namespace: luko
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-nginx  
  template:
    metadata:
      labels:
        app: ingress-nginx
    spec:
      containers:
      - image: nginx
        name: ingress-nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx # mount nginx-conf volumn to /etc/nginx
          readOnly: true
          name: nginx-conf
      volumes:
      - name: nginx-conf
        configMap:
          name: ingress-nginx-conf # place ConfigMap `nginx-conf` on /etc/nginx
          items:
            - key: nginx.conf
              path: nginx.conf
      restartPolicy: Always
