ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: main-ingress
  namespace: luko
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: app-example.minikube
    http:
      paths:
      - backend:
          serviceName: ingress-nginx-service
          servicePort: 80
        path: /(.*)
